<resources>
    <string name="app_name" translatable="false">The Time Machine</string>
    <string name="alarm_add">Add Alarm</string>
    <string name="label_hint">Alarm Label</string>
    <string name="delete_alarm">Delete</string>
    <string name="temp_icon" translatable="false">Temporary Icon</string>
    <string name="alarm_format" translatable="false">%d:%02d</string>
    <string name="stop">Stop</string>
    <string name="snooze">Snooze</string>
    <string name="notification_title">Alarm</string>
    <string name="title_activity_stop_snooze" translatable="false">StopSnoozeActivity</string>
    <string name="stop_button">Stop</string>
    <string name="snooze_button">Snooze</string>
    <string name="snooze_duration_label">"Modify Snooze Duration"</string>
    <string name="dummy_content">TODO: Change This Later</string>
    <string name="msg_alarm_set">Alarm set for %02d:%02d</string>
    <string name="msg_rec_alarm_set">Recurring Alarm set for %02d:%02d</string>
    <string name="msg_alarm_canceled">Alarm for %02d:%02d - cancelled</string>
    <string name="list_of_weekdays_SU">Su Mo Tu We Th Fr Sa</string>
    <string name="list_of_weekdays_Mo">Mo Tu We Th Fr Sa Su</string>
    <string name="got_it">Got it</string>
    <string name="this_app_needs">This App needs permission to notify you when an alarm goes off\n\nIf you do not grant it you will be unable to stop the alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="su">Su</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="alarmsetup_title">Alarm Set-up</string>
    <string name="settings_title">Settings</string>
    <string name="alarmlist_title">Alarms</string>
    <string name="action_delete" translatable="false">ACTION_DELETE</string>
    <string name="day_today">Today</string>
    <string name="day_tomorrow">Tomorrow</string>
    <string name="su_mo_tu_we_th_fr_sa">Su Mo Tu We Th Fr Sa</string>
    <string name="mo_tu_we_th_fr_sa_su">Mo Tu We Th Fr Sa Su</string>
    <string name="clock_format">Clock Format</string>
    <string name="format_24h"></string>
    <string name="format_am" translatable="false">AM</string>
    <string name="format_pm" translatable="false">PM</string>
    <string name="sound_and_vibration">Sound and Vibration</string>
    <string name="alarm_list_conf">Alarm List</string>
    <string name="vibration_pattern">Vibration Pattern</string>
    <string name="alarm_sounds">Alarm Sounds</string>
    <string name="gradual_volume_increase">Gradual Volume Increase</string>
    <string name="sort_alarms_list">Sort Alarms List</string>
    <string name="language_list">Language</string>
    <string name="theme_select">Theme Colors</string>
    <string name="theme_type">Theme Brightness</string>
    <string name="description_up_arrow_back">Back</string>
    <string name="key_h12_24" translatable="false">KEY_H12_24</string>
    <string name="key_ring_duration" translatable="false">KEY_RING_DURATION</string>
    <string name="key_first_day" translatable="false">KEY_FIRST_DAY</string>
    <string name="key_ring_repeat" translatable="false">KEY_RING_REPEAT</string>
    <string name="key_snooze_duration" translatable="false">KEY_SNOOZE_DURATION</string>
    <string name="key_vibration_pattern" translatable="false">KEY_VIBRATION_PATTERN</string>
    <string name="key_alarm_sound" translatable="false">KEY_ALARM_SOUND</string>
    <string name="key_sort_type" translatable="false">KEY_SORT_TYPE</string>
    <string name="key_sort_separate" translatable="false">KEY_SORT_SEPARATE</string>
    <string name="key_gradual_volume" translatable="false">KEY_GRADUAL_VOLUME</string>
    <string name="key_time_format" translatable="false">KEY_TIME_FORMAT</string>
    <string name="ring_duration">Ring for:</string>
    <string name="first_day_of_week">First Day of Week</string>
    <string name="times_to_keep_on_ringing">If not stopped, number of times to keep on ringing:</string>
    <string name="snooze_for">Snooze for:</string>
    <string name="times_5t" translatable="false">5T</string>
    <string name="one_minute" translatable="false">60Seconds</string>
    <string name="none_vibration" translatable="false">none</string>
    <string name="by_time_set" translatable="false">by_time_set</string>
    <string name="duplicate_alarm_title">"Duplicate Alarm"</string>
    <string name="duplicate_alarm_message">"Only one alarm can be scheduled to a specified time"</string>
    <string name="check" translatable="false">check</string>
    <string name="duplicate">Duplicate</string>
    <string name="edit">edit</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="settings">settings</string>
    <string name="open_date_picker">Open Date Picker</string>
    <string name="title_error">Error</string>
    <string name="title_warning">Warning</string>
    <string name="confirm">Confirm</string>
    <string name="alarm_in_the_past">Date and Hour indicate an alarm in the past.</string>
    <string name="must_permit">Failing to give the app permission to post notifications\nwill make stopping the alarm clock impossible</string>
    <string name="dummy_alarm_date_time">Alarm Set to XXX at 00:00</string>
    <string name="time_format_display">EEEE, MMMM d, yyyy \'at\' HH:mm</string>
    <string name="time_format_cal" translatable="false">E, d MMMM, yyyy</string>
    <string name="today_in_brackets">" [TODAY]"</string>
    <string name="tomorrow_in_brackets">" [TOMORROW]"</string>
    <string name="error_in_brackets">"Error: Alarm time already passed"</string>
    <string name="cancel_as_negative">Cancel</string>
    <string name="weekly">Weekly</string>
    <string name="single">Single</string>
    <string name="time_format">Time Format</string>
    <string name="general">General</string>
    <string name="ring_and_snooze">Ring and Snooze</string>
    <string name="key_alarm_list" translatable="false">KEY_ALARM_LIST</string>
    <string name="ITEM_PREF_FILENAME" translatable="false">item_pref_filename</string>
    <string name="per_item_zoom_icon">Per-item Zoom Icon</string>
    <string name="per_item_vibrate_icon">Per-Item Vibrate Icon</string>
    <string name="per_item_mute_icon">Per-Item Mute Icon</string>
    <string name="date_picker">Date Picker</string>
    <string name="date_picker_x">Date Picker</string>
    <string name="single_oneoff">Single</string>
    <string name="weekly_repeat">Weekly</string>
    <string name="edit_action_bar">edit</string>
    <string name="duplicate_action_bar">Duplicate</string>
    <string name="delete_action_bar">Delete</string>
    <string name="settings_action_bar">Settings</string>
    <string name="alarmlist_action_bar">Alarm List</string>
    <string name="checkmark_action_bar">Checkmark</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="button">Button</string>
    <string name="ok_calendar">OK</string>
    <string name="cancel_calendar">Cancel</string>
    <string name="dates_to_exclude_calendar_title">Dates to Exclude</string>
    <string name="alarm_scheduled_for">"Alarm scheduled for "</string>
    <string name="date_format">EEEE, MMMM d, yyyy \'at\' h:mm a</string>
    <string name="date_format_wd">EEEE, MMMM d, yyyy</string>
    <string name="day_plural">" days "</string>
    <string name="day_singular">"1 day "</string>
    <string name="hour_plural">" hours "</string>
    <string name="hour_singular">"1 hour "</string>
    <string name="minute_plural">" minutes "</string>
    <string name="minute_singular">"1 minute "</string>
    <string name="from_now">from now</string>
    <string name="ok_general">@android:string/ok</string>
    <string name="cancel_general">@android:string/cancel</string>
    <string name="select_date">Select Date</string>
    <string name="dates_to_exclude">Dates to Exclude:</string>
    <string name="ring_duration_def" translatable="false">30Seconds</string>
    <string name="clock_format_def" translatable="false">h24</string>
    <string name="first_day_week_def" translatable="false">Su</string>
    <string name="ring_repeat_def" translatable="false">5T</string>
    <string name="snooze_duration_def" translatable="false">300Seconds</string>
    <string name="vibration_pattern_def" translatable="false">rsb</string>
    <string name="alarm_sound_def" translatable="false">rooster</string>
    <string name="sort_type_def" translatable="false">by_time_set</string>
    <string name="sort_separate_def" translatable="false">true</string>
    <string name="gradual_volume_def" translatable="false">30Seconds</string>
    <string name="clock_type_def" translatable="false">analog</string>
    <string name="inactive_alarms_at_the_bottom">Inactive alarms at the bottom</string>
    <string name="h24_clock" translatable="false">h24</string>
    <string name="analog_clock" translatable="false">analog</string>
    <string name="digital_clock" translatable="false">digital</string>
    <string name="alarm_scheduled_for_now">Alarm scheduled for now</string>
    <string name="clock_12h">12h Clock</string>
    <string name="clock_24h">24h Clock</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="seconds_15">15 Seconds</string>
    <string name="seconds_30">30 Seconds</string>
    <string name="seconds_45">45 Seconds</string>
    <string name="minutes_1">1 Minute</string>
    <string name="minutes_2">2 Minutes</string>
    <string name="minutes_3">3 Minutes</string>
    <string name="minutes_5">5 Minutes</string>
    <string name="minutes_6">6 Minutes</string>
    <string name="minutes_7">7 Minutes</string>
    <string name="minutes_10">10 Minutes</string>
    <string name="no_vibrate">None</string>
    <string name="never">Never</string>
    <string name="t1">1 Time</string>
    <string name="t2">2 Times</string>
    <string name="t5">5 Times</string>
    <string name="t10">10 Times</string>
    <string name="forever">Forever</string>
    <string name="single_short_beat">Single short beat</string>
    <string name="three_short_beats">Three short beats</string>
    <string name="single_long_beat">Single long beat</string>
    <string name="rep_short_beats">Repeating short beats</string>
    <string name="rep_long_beats">Repeating long beats</string>
    <string name="cont">Continuous</string>
    <string name="mute">No Sound (mute)</string>
    <string name="std_digital">Standard Digital</string>
    <string name="clock_alarm">Clock Alarm</string>
    <string name="digital_alarm">Digital Alarm</string>
    <string name="digital_beep_beep">Digital Beep-Beep</string>
    <string name="elect_alarm_clock">Electronic Alarm Clock</string>
    <string name="old_mech_alarm_clock">Old Mechanic Alarm Clock</string>
    <string name="os_alarm_clock">Oversimplified Alarm Clock</string>
    <string name="rooster">Rooster</string>
    <string name="sort_by_time_set">By time set</string>
    <string name="sort_by_alarm_time">By alarm time</string>
    <string name="sort_alphabet">Alphabetically</string>
    <string name="lang_en">English (en)</string>
    <string name="lang_he">עברית (he)</string>
    <string name="olive_green">Olive Green</string>
    <string name="red_cyan">Red &amp; Cyan</string>
    <string name="fairy">Fairy</string>
    <string name="autumn">Autumn</string>
    <string name="tame">Earth</string>
    <string name="summer">Summer</string>
    <string name="theme_type_auto">System</string>
    <string name="theme_type_light">Light Colors</string>
    <string name="theme_type_dark">Dark Colors</string>
    <string name="general_error">--- ERROR ---</string>
    <string name="no_inc">No Increase</string>
    <string name="snooze_button_sec">Sec</string>
    <string name="snooze_button_min">Min</string>
</resources>