<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.TheTimeMachine.FullscreenContainer"
    tools:context=".UI.StopSnoozeActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="@color/design_default_color_surface"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.TheTimeMachine.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/stop_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeMinTextSize="14sp"
                android:text="@string/stop_button"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_red_light"
                android:textSize="24sp"
                app:icon="@drawable/baseline_alarm_off_24"
                app:iconGravity="textStart"
                app:iconPadding="6dp"
                app:iconSize="24dp"
                app:iconTint="@android:color/holo_red_light" />

            <Button
                android:id="@+id/snooze_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeMinTextSize="14sp"
                android:text="@string/snooze_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="24sp"
                app:iconGravity="textStart"
                app:iconPadding="6dp"
                app:iconSize="24dp"
                app:iconTint="@android:color/holo_orange_dark"
                app:icon="@drawable/snooze_fill0_wght400_grad0_opsz24" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>